updated with new library

--- a/model_centric_analysis_with_lib.ipynb
+++ b/model_centric_analysis_with_lib.ipynb
@@ -20,18 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting up Sandbox...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from artificienlib import syftfunctions as sf\n",
     "import torch as th\n",
@@ -44,38 +35,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define Model\n",
+    "Here, we define our model using standard pytorch model definition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LinearRegression(th.nn.Module):    \n",
-    "    \n",
+    "class LinearRegression(th.nn.Module):\n",
+    "\n",
     "    def __init__(self):\n",
     "        super(LinearRegression, self).__init__()\n",
-    "        self.linear = th.nn.Linear(1, 1)    \n",
-    "    \n",
+    "        self.linear = th.nn.Linear(3, 1)\n",
+    "\n",
     "    def forward(self, x):\n",
     "        y_pred = self.linear(x)\n",
     "        return y_pred\n",
-    "    \n",
+    "\n",
     "model = LinearRegression()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X = th.randn(1, 1)\n",
-    "y = nn.functional.one_hot(th.tensor([2]))\n",
-    "model_params, training_plan = sf.def_training_plan(model, X, y, {\"loss\":sf.mse_with_logits})"
+    "#### Enter Password\n",
+    "Enter your password bellow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"perceptron\"\n",
+    "dataset = \"dataSetFive\"\n",
+    "password = input(\"Enter your cognito password: \") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = th.randn(1, 3)\n",
+    "y = nn.functional.one_hot(th.tensor([2]))\n",
+    "model_params, training_plan = sf.def_training_plan(model, X, y, {\"loss\": sf.mse_with_logits})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,36 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = sf.artificien_connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Host response: {'type': 'model-centric/host-training', 'data': {'status': 'success'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "sf.send_model(name=\"lin_test\", version=\"0.1.0\", batch_size=1, learning_rate=0.2, max_updates=10, model_params=model_params, grid=grid, training_plan=training_plan, avg_plan=avg_plan)"
+    "sf.send_model(name=name, dataset_id=dataset, version=\"0.1.0\", batch_size=1, learning_rate=0.2, max_updates=10,\n",
+    "               model_params=model_params, training_plan=training_plan, avg_plan=avg_plan, password=password)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pysyft",
    "language": "python",
-   "name": "python3"
+   "name": "pysyft"
   },
   "language_info": {
    "codemirror_mode": {
