update to number of devices and update to readme

--- a/tutorials/health-tutorial.ipynb
+++ b/tutorials/health-tutorial.ipynb
@@ -6,21 +6,21 @@
    "source": [
     "# Artificien Sample Model Upload\n",
     "Here, we demonstrate how to create a machine learning model and upload it so that it may be trained on client devices using federated learning.\n",
-    "We create a simple linear regression model below, defined in PyTorch syntax, to predict a single variable 'Y' using another three input variables, which are stored in the vector 'X'. We then upload the model to a backend service called a 'PyGrid' node. Models sent to this PyGrid node will be downloaded by client devices (iPhones, Androids, etc.) and trained on local data. \n",
+    "We create a simple linear regression model below, defined in PyTorch syntax, to predict a single variable 'Y' using another three input variables, which are stored in the vector 'X'. We then upload the model to a backend service that we call a 'node'. Models sent to this node will be downloaded by client devices (iPhones, Androids, etc.) and trained on local user data. \n",
     "\n",
-    "Each time a device or set of devices trains your model, the model stored on the PyGrid node will be updated, to reflect the newly improved model. In our case, we train a perceptron model (a very simple machine learning model) to take in the data `age`, `bodyMassIndex` and `sex` to predict a user's `stepCount`. Once we upload your model, then users of the artificien health app can download and train your model on their **real live Apple Health data**, where your model will learn how to utilize the three input variables (`age`, `bodyMassIndex` and `sex`) to predict the output variable (`stepCount`). \n",
+    "Each time a device or set of devices trains your model, the model stored on the node will be updated to reflect the newly improved model. In our case, we train a linear regression model (a very simple machine learning model) to take in the data `Age`, `Sex` and `Body Mass Index` to predict a user's `Weekly Step Count`. Once we upload your model, then users of the Artificien Health app can download and train your model on their **real live Apple Health data**, where your model will learn how to utilize the three input variables (`Age`, `Sex` and `Body Mass Index`) to predict the output variable (`Weekly Step Count`). \n",
     "\n",
     "As soon as you upload the below tutorial model, you'll find it on [artificien.com](https://artificien.com) on your 'models' page. There, you'll be able to check the model progress and download the newly trained model once training is complete. \n",
     "\n",
     "## Cycles, Accuracy, and Model Progress\n",
     "\n",
-    "The model uploaded in this tutorial, for the sake of this demonstration, is configured to train on at minimum 1 device per \"training cycle\" and at maximum 5 devices per training cycle. If more than 1 device but fewer than 5 devices have trained your model within 1 hour, this cycle will be marked complete. Likewise, *as soon as* 5 devices have trained your model, the cycle is complete. In total, this model will train for 5 cycles. \n",
+    "The model uploaded in this tutorial, for the sake of this demonstration, is configured to train on at minimum 1 device per \"training cycle\" and at maximum 4 devices per training cycle. If more than 1 device but fewer than 4 devices have trained your model within 1 hour, this cycle will be marked complete. Likewise, *as soon as* 4 devices have trained your model, the cycle is complete. In total, this model will train for 4 cycles. \n",
     "\n",
-    "As your model trains, devices training the model will send 'updates' to our backend servers indicating how the model should be improved. Once a cycle completes, we average up all of the 'updates' that devices who trained your model sent, and create a new-and-improved model, which incorporates the learnings your model obtained while training on the devices. Then, when another cycle commences, devices will download this new-and-improved model and send information to us on how we can improve *that* model even further as well. This process, where we iteratively update the model at the end of each cycle, continues until we reach `num_cycles`. As your model trains, you'll see its average loss (in this case, the number of steps by which it misses the mark when trying to predict someone's step count) update, and you'll see that its progress % goes up over time.\n",
+    "As your model trains, devices training the model will send 'updates' to our backend servers indicating how the model should be improved. Once a cycle completes, we average up all of the 'updates' that devices that trained your model sent, and create a new-and-improved model, which incorporates the learnings your model obtained while training on the device data. Then, when another cycle commences, devices will download this new-and-improved model and send information to us on how we can improve *that* model even further as well. This process, where we iteratively update the model at the end of each cycle, continues until we reach `num_cycles`. As your model trains, you'll see its average loss (in this case, the number of steps by which it misses the mark when trying to predict someone's step count) update, and you'll see that its progress % goes up over time.\n",
     "\n",
     "For the machine learning engineers out there - think of `num_cycles` as analagous to `num_epochs`, and min/ max `num_devices` as analagous to `batch_size`. In standard ML, models are updated at end of an epoch, after training on `batch_size` samples. In federated ML, model parameters are updated at the end of a cycle, after training on `num_devices`.\n",
     "\n",
-    "Note that, for a real machine learning model, you'd certainly want to train on a lot more than 1-5 devices per cycle, and you might want to have more than 5 cycles.\n",
+    "Note that, for a real machine learning model, you'd certainly want to train on a lot more than 1-4 devices per cycle, and you might want to have more than 4 cycles.\n",
     "\n",
     "## Please Read: \n",
     "- You cannot save changes made to this tutorial - this file is shared by all Artificien users and cannot be altered. To create your own notebooks (which can be edited and saved), create a new notebook in your root ('/') directory, or make a copy of this notebook and place it in your root directory.\n",
@@ -171,7 +171,6 @@
    "outputs": [],
    "source": [
     "feature_names = ['Age', 'Sex', 'Body Mass Index']\n",
-    "# features = ['Body Mass Index']\n",
     "label_names = ['Weekly Step Count']\n",
     "features = health_data[feature_names]\n",
     "labels = health_data[label_names]"
@@ -340,9 +339,9 @@
    "metadata": {},
    "source": [
     "### Train Test Split\n",
-    "In order to test our model on the sample data, we'll perform a train test split. We'll save 80% of the sample data for training (X_train, y_train) and 20% of the sample data for testing. We'll alsodefine a standard Torch DataLoader to load in the data. Note that the exact training process we've shown here will *also* occur on the user devices.\n",
+    "In order to test our model on the sample data, we'll perform a train test split. We'll save 80% of the sample data for training (X_train, y_train) and 20% of the sample data for testing. We'll also define a standard Torch DataLoader to load in the data. Note that the exact training process we've shown here will *also* occur on the user devices.\n",
     "\n",
-    "As explained above, `batch_size` and `num_devices` are analagous in some ways, so we'll set our `batch_size` equal to 5 - the maximum number of devices per cycle we aim to train on."
+    "As explained above, `batch_size` and `num_devices` are analagous in some ways, so we'll set our `batch_size` equal to 4 - the maximum number of devices per cycle we aim to train on."
    ]
   },
   {
@@ -374,7 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 5\n",
+    "batch_size = 4\n",
     "train_dataloader = get_data_loader(train_features, train_labels, batch_size)\n",
     "test_dataloader = get_data_loader(test_features, test_labels, batch_size)"
    ]
@@ -408,10 +407,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test the model on the sample data\n",
+    "### Train and test the model on the sample data\n",
     "To train the model, we choose a standard mean absolute error (MAE) loss, which means that our loss is in the same units as our labels. In this case, this means that our loss indicates the number of steps by which our model 'missed the mark'. We set our learning rate to 0.01, a standard rate in most ML workflows.\n",
     "\n",
-    "We set our `num_epochs` to 5, since, as explained above, the number of cycles is analagous to the number of epochs."
+    "We set our `num_epochs` to 4, since, as explained above, the number of cycles is analagous to the number of epochs."
    ]
   },
   {
@@ -443,7 +442,7 @@
    "source": [
     "device = \"cpu\"\n",
     "lr = 0.01 # learning rate\n",
-    "loss_fn = nn.L1Loss()\n",
+    "loss_fn = nn.L1Loss() # L1 loss = Mean Absolute Error\n",
     "optimizer = th.optim.SGD(model.parameters(), lr=lr)"
    ]
   },
@@ -461,11 +460,11 @@
     "\n",
     "        # Compute prediction error\n",
     "        pred = model(X)\n",
-    "        # y = nn.functional.normalize(y) # model outputs normalized predictions\n",
     "        loss = loss_fn(pred, y)\n",
     "        \n",
-    "        # Clear gradient buffers because we don't want any gradient from previous epoch to carry forward, dont want to cummulate gradients\n",
+    "        # Clear gradient buffers because we don't want any gradient from previous epoch to carry forward\n",
     "        optimizer.zero_grad() \n",
+    "        \n",
     "        # get gradients w.r.t to parameters\n",
     "        loss.backward()\n",
     "        optimizer.step()"
@@ -478,6 +477,7 @@
    "outputs": [],
    "source": [
     "def test(dataloader, model):\n",
+    "    \"\"\" A standard PyTorch testing function \"\"\"\n",
     "    size = len(dataloader.dataset)\n",
     "    model.eval()\n",
     "    test_loss, correct = 0, 0\n",
@@ -506,23 +506,23 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "Test Error - Avg loss: 23192.588203 \n",
+      "Test Error - Avg loss: 31216.511914 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "Test Error - Avg loss: 22586.672793 \n",
+      "Test Error - Avg loss: 30278.627734 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "Test Error - Avg loss: 22017.616406 \n",
+      "Test Error - Avg loss: 29404.468125 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "Test Error - Avg loss: 21480.276680 \n",
+      "Test Error - Avg loss: 28574.242891 \n",
       "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "Test Error - Avg loss: 20973.369883 \n",
+      "Test Error - Avg loss: 27802.634688 \n",
       "\n",
       "Done!\n"
      ]
@@ -530,7 +530,7 @@
    ],
    "source": [
     "# Train it\n",
-    "epochs = 5\n",
+    "epochs = 4\n",
     "for t in range(epochs):\n",
     "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
     "    train(train_dataloader, model, loss_fn, optimizer)\n",
@@ -543,7 +543,7 @@
    "metadata": {},
    "source": [
     "### Done Training!\n",
-    "As you can see, our model improved as it trained. In a real world scenario, you'd likely want a much larger batch size (`num_devices`) and epoch count (`num_cycles`) in order for your model to improve substantially. Nevertheless, we've shown some improvement here, reaching an average weekly step count error of around 20K, and it is clear that the model has begun to determine how the input data predicts the output label (step count). Below, we print the average step count error we obtained, and a 'baseline' metric, which is the average error you would obtain if you were to simply guess that all individuals had the *average* step count."
+    "As you can see, our model improved as it trained. In a real world scenario, you'd likely want a much larger batch size (`num_devices`) and epoch count (`num_cycles`) in order for your model to improve substantially. Nevertheless, we've shown some improvement here, reaching an average weekly step count error of around 25K, and it is clear that the model has begun to determine how the input data predicts the output label (step count). Below, we print the average step count error we obtained, and a 'baseline' metric, which is the average error you would obtain if you were to simply guess that all individuals had the *average* step count."
    ]
   },
   {
@@ -555,8 +555,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our test loss: 20973\n",
-      "Test loss obtained by guessing: 75347\n"
+      "Our test loss: 27802\n",
+      "Test loss obtained by guessing: 71427\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, if we were to train our model with a larger batch size or more epochs (more devices and more cycles), we'd get a better result:"
+    "**As you can see, if we were to train our model with a larger batch size or more epochs (more devices and more cycles), we'd get a better result**:"
    ]
   },
   {
@@ -599,8 +599,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our test loss: 3563\n",
-      "Test loss obtained by guessing: 75347\n"
+      "Our test loss: 3425\n",
+      "Test loss obtained by guessing: 71427\n"
      ]
     }
    ],
@@ -614,7 +614,7 @@
    "metadata": {},
    "source": [
     "# Federated learning\n",
-    "Now that we've built and validated that our model works on the sample data - here comes the easy part. Now, we simply upload our model to artificien's backend servers, to make it available for download and training by client devices. Lets walk you through the steps."
+    "Now that we've built and validated that our model works on the sample data - here comes the easy part. Now, we simply upload our model to artificien's backend servers to make it available for download and training by client devices. Lets walk you through the steps."
    ]
   },
   {
@@ -622,7 +622,7 @@
    "metadata": {},
    "source": [
     "#### Check available datasets\n",
-    "Check the datasets that you've purchased access to. Today, we'll use the Artificien Health dataset, which you'll have access to by default. Enter your artificien password bellow so artificien can validate your credentials"
+    "Check the datasets that you've purchased access to. Today, we'll use the Artificien Health dataset, which you'll have access to by default. Enter your Artificien password below so artificien can validate your credentials"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "password = \"artificien1\""
+    "password = \"your_password_here\""
    ]
   },
   {
@@ -696,7 +696,7 @@
    "metadata": {},
    "source": [
     "#### Defining an Averaging Plan\n",
-    "Next we define our averaging plan - the way our model averages the results from multiple edge devices. Here, we just use the default averaging plan, which is to take all model updates from any device in equal weight - that is, Device 1 should have just as much input as device 2 when improving the model."
+    "Next we define our averaging plan - the way our model averages the results from multiple edge devices. Here, we just use the default averaging plan, which is to take all model updates from any device in equal weight - that is, Device 1 should have just as much input as Device 2 when improving the model."
    ]
   },
   {
@@ -713,9 +713,9 @@
    "metadata": {},
    "source": [
     "#### Send Model\n",
-    "Next, we sent the model to artificien's backend services to be hosted and downloaded by client devices. Here, we are using the features we defined up above - `age`, `bodyMassIndex` and `sex` to predict a the label - `stepCount`... so we make sure to let artificien's servers know that this is the case. If we instead, say, wanted to to predict a person's age using only their `sex` and `stepCount`, we are free to do that as well.\n",
+    "Next, we send the model to artificien's backend services to be hosted and downloaded by client devices. Here, we are using the features we defined up above - `Age`, `Sex` and `Body Mass Index` to predict a the label - `Weekly Step Count`... so we make sure to let artificien's servers know that this is the case. If we instead, say, wanted to to predict a person's `Age` using only their `Sex` and `Weekly Step Count`, we are free to do that as well. Any permutation of features and labels is possible.\n",
     "\n",
-    "Note that we set `min_workers` to 1, `max_workers` to 8, and `num_cyles` to 5.\n",
+    "Note also that we set `min_workers` to 1, `max_workers` to 4, and `num_cyles` to 4.\n",
     "\n",
     "If you happen to be the first person to run this tutorial in a while, you will need to wait a few minutes for the infrastructure to host your model to be created. Otherwise, you'll see that your model is uploaded and made available for training almost instantly."
    ]
@@ -783,8 +783,8 @@
     "    \n",
     "    # Determine what training should look like\n",
     "    min_workers=1,\n",
-    "    max_workers=5,\n",
-    "    num_cycles=5,\n",
+    "    max_workers=4,\n",
+    "    num_cycles=4,\n",
     "\n",
     "\n",
     "    # Set the training and average plans\n",
@@ -806,11 +806,11 @@
    "metadata": {},
    "source": [
     "### Done!\n",
-    "If we get the response \"Host response: {'type': 'model-centric/host-training', 'data': {'status': 'success'}}\"\n",
+    "If we get the response `Host response: {'type': 'model-centric/host-training', 'data': {'status': 'success'}}`\n",
     "back, then our model was successfully uploaded to our backend services, and is now available to be downloaded and trained by client devices. If you navigate to [your models](https://artificien.com/models), you can monitor your model's progress and loss, and download it once it's done.\n",
     "\n",
     "## Learn More\n",
-    "To learn more about how to use the artificien library for your own unique models, head to our documentation page at [artificien.com/data_scientist_documentation](https://artificien.com/data_scientist_documentation)."
+    "To learn more about how to use the Artificien library for your own unique models, head to our documentation page at [artificien.com/data_scientist_documentation](https://artificien.com/data_scientist_documentation)."
    ]
   }
  ],
